--- a/app/src/main/res/layout/activity_contacts2.xml
+++ b/app/src/main/res/layout/activity_contacts2.xml
@@ -6,15 +6,18 @@
     android:layout_height="match_parent"
     tools:context=".Group.ui.Contacts">
 
-    <include
-        android:id="@+id/include"
-        layout="@layout/activitybar"
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbar7"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@null"
+        android:minHeight="?attr/actionBarSize"
+        android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:titleTextColor="#000000" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv"
@@ -23,5 +26,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/include" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar7" />
 </androidx.constraintlayout.widget.ConstraintLayout>
