--- a/app/src/main/res/layout/contatcsselector.xml
+++ b/app/src/main/res/layout/contatcsselector.xml
@@ -62,11 +62,23 @@
         android:layout_width="45dp"
         android:layout_height="43dp"
         android:layout_marginTop="44dp"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="92dp"
         android:background="@null"
         android:scaleType="fitStart"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/ic_baseline_message_24" />
+
+    <ImageButton
+        android:id="@+id/addtocontact2"
+        android:layout_width="45dp"
+        android:layout_height="43dp"
+        android:layout_marginTop="44dp"
+        android:layout_marginEnd="36dp"
+        android:background="@null"
+        android:scaleType="fitStart"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:srcCompat="@drawable/ic_baseline_phone_24" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
